fixed alignment

--- a/src/components/ListNFTModal/ListNFTModal.module.scss
+++ b/src/components/ListNFTModal/ListNFTModal.module.scss
@@ -60,3 +60,8 @@
 
   width: 100px !important;
 }
+
+.dateContainer {
+  display: flex;
+  justify-content: right;
+}
